compiler/weave_syntax/tests/data/syntax/declarations/function0001.error
error: Unexpected tokens
        --> <source>:2:1
         |
       2 | private package; function fooB() { }
         | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
       3 |         package; function fooC() { }
         | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
