compiler/weave_syntax/tests/data/syntax/declarations/function0001.source
private          function fooA() { }
private package; function fooB() { }
        package; function fooC() { }
